--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-web": "0.17.1",
     "yup": "^0.32.11",
     "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1"
+    "react-native-reanimated": "~2.3.1",
+    "expo-device": "~4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
