--- a/package.json
+++ b/package.json
@@ -10,26 +10,31 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/webpack-config": "~0.16.2",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.2",
     "@rneui/base": "^4.0.0-rc.1",
     "@rneui/themed": "^4.0.0-rc.1",
-    "expo": "~44.0.0",
+    "apisauce": "^2.1.5",
+    "expo": "^45.0.4",
     "expo-constants": "^13.0.2",
-    "expo-device": "~4.1.0",
-    "expo-status-bar": "~1.2.0",
+    "expo-device": "~4.2.0",
+    "expo-status-bar": "~1.3.0",
     "formik": "^2.2.9",
     "node-fetch": "^2.6.7",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
-    "react-native-web": "0.17.1",
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2",
+    "webpack-dev-server": "~3.11.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
