--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "~0.16.2",
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -19,6 +20,7 @@
     "@rneui/themed": "^4.0.0-rc.1",
     "apisauce": "^2.1.5",
     "expo": "^45.0.4",
+    "expo-app-loading": "^2.0.0",
     "expo-constants": "^13.0.2",
     "expo-device": "~4.2.0",
     "expo-status-bar": "~1.3.0",
